--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,53 @@
-<div class="row">
+    {{!-- login start --}}
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
+          <div id="ui">
+            <h1 class="text-center">LOGIN FORM</h1>
+
+
+            <form class="form-group text-center">
+
+              <div class="row">
+              </div>
+              <br>
+              <div>
+                <div class="row">
+                  <!-- <div class="col-lg-6"> Original class value -->
+                  <div class="col-lg-12 col-sm-12 col-md-12 ">
+                    <label>E-mail:</label>
+                    <input type="text" name="fname" class="form-control" placeholder="Enter your email..">
+                    <br>
+                  </div>
+                  <div class="col-lg-12 col-sm-12">
+                    <label>Password:</label>
+                    <input type="text" name="lname" class="form-control" placeholder="Enter your password..">
+                    <br>
+                  </div>
+                </div>
+                <br>
+                <input type="submit" name="login" value="Log In" class="btn btn-primary btn-block btn-lg mb-4"></input>
+
+                <input type="submit" name="register" value="Create New Account"
+                  class="btn btn-success btn-block btn-lg"></input>
+              </div>
+
+            </form>
+
+          </div>
+        </div>
+        <div class="col-lg-3"></div>
+      </div>
+    </div>
+    {{!-- login end --}}
+
+
+
+
+
+
+{{!-- <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
 
@@ -39,4 +88,4 @@
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="./js/login.js"></script> --}}
