working on home routes

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,10 @@
-<div class="row">
+{{#each profiles as |profiles| }}
+<h1>{{location}}</h1>
+{{/each}}
+
+
+<div>test</div>
+{{!-- <div class="row">
   <div class="col-auto">
     <h2>Welcome, {{name}}!</h2>
   </div>
@@ -43,6 +49,6 @@
     {{/each}}
   </div>
   {{/if}}
-</div>
+</div> --}}
 
 <script src="./js/profile.js"></script>
