--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,7 +57,7 @@
 
 
 
-    {{!-- <div class="flex-column justify-space-around">
+    <div class="flex-column justify-space-around">
       <header class="display-flex justify-space-between align-center p-2">
         <h1>
           <span role="img" aria-label="money">💸</span>
@@ -74,7 +74,7 @@
         </nav>
       </header>
       <main class="container container-fluid mt-5">
-        <!-- Render the sub layout --> --}}
+        <!-- Render the sub layout -->
         {{{ body }}}
       </main>
       <footer>
