--- a/views/matches.handlebars
+++ b/views/matches.handlebars
@@ -3,17 +3,19 @@
 
 {{#each profiles as |profiles| }}
 
-
+<h3>
+<a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a>
+</h3>
 {{!-- <h3>{{user.firstname}} {{user.lastname}}</h3> --}}
 <p>{{user.username}}</p>
 <p>Activities: {{activities}}</p>  
 <p>Bio: {{bio}}</p>  
 <p>Age: {{age}}</p>  
 <p>Location: {{location}}</p>
-<p>snapchat: {{snapchat}}</p>  
+{{!-- <p>snapchat: {{snapchat}}</p>  
 <p>instagram: {{instagram}}</p>  
 <p>email: {{user.email}}</p>  
-<p>phonenumber: {{phonenumber}}</p>  
+<p>phonenumber: {{phonenumber}}</p>   --}}
 <div class="m-2 card">
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
