--- a/views/matches.handlebars
+++ b/views/matches.handlebars
@@ -18,7 +18,7 @@
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">{{user.firstname}} {{user.lastname}}</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">{{activities}}</p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
