--- a/views/clickedMatch.handlebars
+++ b/views/clickedMatch.handlebars
@@ -1,4 +1,4 @@
-<p>
+{{!-- <p>
     <h1>
     {{user.firstname}} {{user.lastname}}
     </h1>
@@ -17,4 +17,56 @@
     <br>
     Phone Number: {{phonenumber}}
 
-</p>
+</p> --}}
+
+
+<body class="bg-dark">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-10 mt-5 pt-5">
+                <div class="row z-depth-3">
+                    <div class="col-sm-4 bg-info rounded-left">
+                        <div class="card-block text-center text-white">
+                            <i class="fas fa-user-tie fa-7x mt-5"></i>
+                            <h2 class="font-weight-bold mt-4">{{user.username}}</h2>
+                            <p>{{bio}}</p>
+                            <i class="far fa-edit fa-2x mb-4"></i>
+                        </div>
+                    </div>
+                    <div class="col-sm-8 bg-white rounded-right">
+                        <h3 class="mt-3 text-center">My Activities</h3>
+                        <hr class="bg-primary">
+                        <!-- <hr class="badge-primary mt-0 w-25"> -->
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Recent:</p>
+                                <h6 class="text-muted">{{activities}}</h6>
+                            </div>
+                            
+                        </div>
+                        <hr class="bg-primary">
+                        <br>
+                        <h3 class="mt-3 text-center">My Information</h3>
+                        <hr class="bg-primary">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Name:</p>
+                                <h6 class="text-muted"> {{user.firstname}} {{user.lastname}} </h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Age:</p>
+                                <h6 class="text-muted">{{age}}</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Email:</p>
+                                <h6 class="text-muted">{{email}}</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Phone:</p>
+                                <h6 class="text-muted">{{phonenumber}}</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Known-Location:</p>
+                                <h6 class="text-muted">{{location}}</h6>
+                            </div>
+                        </div>
