--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,52 +3,121 @@
 {{/each}}
 
 
+<h3>{{user.firstname}} {{user.lastname}}</h3>
+<p>{{user.username}}</p>
+<p>Activities: {{activities}}</p>  
+<p>Bio: {{bio}}</p>  
+<p>Age: {{age}}</p>  
+<p>Location: {{location}}</p>
+<p>snapchat: {{snapchat}}</p>  
+<p>instagram: {{instagram}}</p>  
+<p>email: {{user.email}}</p>  
+<p>phonenumber: {{phonenumber}}</p>  
+
 <div>test</div>
-{{!-- <div class="row">
-  <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
-  </div>
-</div>
-
-<div class="row mt-4">
-  <div class="col-md-6">
-    <h3>Create a New Project:</h3>
-
-    <form class="form new-project-form">
-      <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
-      </div>
-      <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
-      </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
-  </div>
-
-  {{#if projects.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
-
-    {{#each projects as |project|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+<body class="bg-dark">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-10 mt-5 pt-5">
+                <div class="row z-depth-3">
+                    <div class="col-sm-4 bg-info rounded-left">
+                        <div class="card-block text-center text-white">
+                            <i class="fas fa-user-tie fa-7x mt-5"></i>
+                            <h2 class="font-weight-bold mt-4">{{user.username}}</h2>
+                            <p>{{bio}}</p>
+                            <i class="far fa-edit fa-2x mb-4"></i>
+                        </div>
+                    </div>
+                    <div class="col-sm-8 bg-white rounded-right">
+                        <h3 class="mt-3 text-center">My Activities</h3>
+                        <hr class="bg-primary">
+                        <!-- <hr class="badge-primary mt-0 w-25"> -->
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Recent:</p>
+                                <h6 class="text-muted">{{activities}}</h6>
+                            </div>
+                            
+                        </div>
+                        <hr class="bg-primary">
+                        <br>
+                        <h3 class="mt-3 text-center">My Information</h3>
+                        <hr class="bg-primary">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Name:</p>
+                                <h6 class="text-muted"> {{user.firstname}} {{user.lastname}} </h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Age:</p>
+                                <h6 class="text-muted">{{age}}</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Email:</p>
+                                <h6 class="text-muted">{{email}}</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Phone:</p>
+                                <h6 class="text-muted">{{phonenumber}}</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Known-Location:</p>
+                                <h6 class="text-muted">{{location}}</h6>
+                            </div>
+                        </div>
+                        
+                        <!-- <hr class="bg-primary">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Email:</p>
+                                <h6 class="text-muted">Johndoe@mail.com</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="font-weight-bold">Phone:</p>
+                                <h6 class="text-muted">123-456-7890</h6>
+                            </div>
+                        </div> -->
+                        <ul class="list-unstyled d-flex justify-content-center mt-4">
+                            <!-- <li><a href="#"><i class="fab fa-facebook-f px-3 h4 text-info"></i></a></li> -->
+                            <!-- <li><a href="#"><i class="fab fa-twitter px-3 h4 text-info"></i></a></li> -->
+                            <li><a href="#"><i class="fab fa-instagram px-3 h4 text-info"></i></a></li>
+                            <li><a href="#"><i class="fab fa-snapchat px-3 h4 text-info"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<br>
+<br>
+<br>
+<!-- 
+<div class="row p-5">
+    <div class="col-sm-6">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Match Name </h5>
+          <p class="card-text">Match user description With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go to Profile</a>
+        </div>
       </div>
     </div>
-    {{/each}}
+    <div class="col-sm-6">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
   </div>
-  {{/if}}
-</div> --}}
+​
+     -->
+    
+​
+</body>
 
 <script src="./js/profile.js"></script>
