--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,3 +123,25 @@ nav .logo {
 #ui label,h1{
   color: #fff;
 }
+
+
+body {
+  background-image: url(https://images.unsplash.com/photo-1607962837359-5e7e89f86776?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+  /* background-image: url(./images/bg.jpg); */
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+​
+#ui {
+  background-color: #2e3135;
+  padding: 30px;
+  margin-top: 80px;
+  border-radius: 10px;
+  opacity: 0.9;
+}
+​
+#ui label,
+h1 {
+  color: #fff;
+}
