--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
             <h1 class="text-center">LOGIN FORM</h1>
 
 
-            <form class="form-group text-center">
+            <form class="form-group login-form text-center">
 
               <div class="row">
               </div>
@@ -15,9 +15,10 @@
               <div>
                 <div class="row">
                   <!-- <div class="col-lg-6"> Original class value -->
+                    
                   <div class="col-lg-12 col-sm-12 col-md-12 ">
                     <label>E-mail:</label>
-                    <input type="text" name="fname" class="form-control" placeholder="Enter your email..">
+                    <input type="text" name="fname" class="form-control" placeholder="Enter your email.." id="email-login">
                     <br>
                   </div>
                   <div class="col-lg-12 col-sm-12">
@@ -28,12 +29,17 @@
                 </div>
                 <br>
                 <input type="submit" name="login" value="Log In" class="btn btn-primary btn-block btn-lg mb-4"></input>
-
-                <input type="submit" name="register" value="Create New Account"
-                  class="btn btn-success btn-block btn-lg"></input>
+              </form>
+              
+                  
+                
               </div>
+              <a href="/register/">
+              <button class="btn btn-success btn-block btn-lg" name="register"  >Create New Account</button>
+              </a>
+              
 
-            </form>
+            
 
           </div>
         </div>
