--- a/views/matches.handlebars
+++ b/views/matches.handlebars
@@ -1,13 +1,11 @@
 <p>this information is hidden behind the nav bar</p>
 <p> -</p>
-
 {{#each profiles as |profiles| }}
-
 <h3>
 <a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a>
 </h3>
 {{!-- <h3>{{user.firstname}} {{user.lastname}}</h3> --}}
-<!--<p>{{user.username}}</p>
+<p>{{user.username}}</p>
 <p>Activities: {{activities}}</p>  
 <p>Bio: {{bio}}</p>  
 <p>Age: {{age}}</p>  
@@ -15,54 +13,34 @@
 {{!-- <p>snapchat: {{snapchat}}</p>  
 <p>instagram: {{instagram}}</p>  
 <p>email: {{user.email}}</p>  
-
-<p>phonenumber: {{phonenumber}}</p>-->  
-
-<div class="card">
-    <img src="./images/photo-of-woman-8.jpg" class="card-img-top" alt="...">
-
-    <div class="card-body">
-      <h4 class="card-title">{{img}}</h4>
-      <h5 class="card-title">{{user.firstname}} {{user.lastname}}</h5>
-      <p class="card-text">{{activities}}</p>
-    </div>
-    {{!-- <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="m-2 card-group"></div>
-  <div class="m-2 card">
+<p>phonenumber: {{phonenumber}}</p>   --}}
+<div class="m-2 card">
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
-      <h4 class="card-title">{{img}}</h4>
       <h5 class="card-title">{{user.firstname}} {{user.lastname}}</h5>
-      <p class="card-text">{{activities}}</p>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
   </div>
-  <div class="m-2 card-group"></div>
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h4 class="card-title">{{img}}</h4>
-      <h5 class="card-title">{{user.firstname}} {{user.lastname}}</h5>
-      <p class="card-text">{{activities}}</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div> --}}
-  
-</div>
 {{/each}}
 
 
+{{!-- <!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matches Card</title>
 
+ 
+</head> --}}
 
- {{!-- <body class="bg-dark"> 
-<div class="m-2 card-group">
+{{!-- <body class="bg-dark"> --}}
+{{!-- <div class="m-2 card-group">
   <div class="m-2 card">
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
@@ -132,7 +110,7 @@
   <div class="m-2 card">
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">{{location}}</h5>
+      <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer">
@@ -159,8 +137,8 @@
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
     
-  </div>
-</div>    
+  </div> --}}
+</div>   
 
 </body>
 
