match cards rough draft

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="#home">My Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -50,12 +50,6 @@
       </nav>
     </div>
     {{!-- carlos end nav --}}
-
-
-
-
-
-
 
     <div class="flex-column justify-space-around">
       <header class="display-flex justify-space-between align-center p-2">
