--- a/views/matches.handlebars
+++ b/views/matches.handlebars
@@ -1,28 +1,27 @@
-<p>this information is hidden behind the nav bar</p>
-<p> -</p>
 {{#each profiles as |profiles| }}
-<h3>
+{{!-- <h3>
 <a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a>
-</h3>
+</h3> --}}
 {{!-- <h3>{{user.firstname}} {{user.lastname}}</h3> --}}
-<p>{{user.username}}</p>
+{{!-- <p>{{user.username}}</p>
 <p>Activities: {{activities}}</p>  
 <p>Bio: {{bio}}</p>  
 <p>Age: {{age}}</p>  
-<p>Location: {{location}}</p>
+<p>Location: {{location}}</p> --}}
 {{!-- <p>snapchat: {{snapchat}}</p>  
 <p>instagram: {{instagram}}</p>  
 <p>email: {{user.email}}</p>  
 <p>phonenumber: {{phonenumber}}</p>   --}}
 <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
+    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
-      <h5 class="card-title">{{user.firstname}} {{user.lastname}}</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <h2 class="card-title"><a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a></h2>
+      <p>{{user.username}}</p>
+      <p class="card-text">{{activities}}</p>
     </div>
-    <div class="card-footer">
+    {{!-- <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
+    </div> --}}
   </div>
 {{/each}}
 
