--- a/views/matches.handlebars
+++ b/views/matches.handlebars
@@ -1,3 +1,4 @@
+<div class="matches-wrapper">
 {{#each profiles as |profiles| }}
 {{!-- <h3>
 <a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a>
@@ -16,15 +17,18 @@
     {{!-- <img src="..." class="card-img-top" alt="..."> --}}
     <div class="card-body">
       <h2 class="card-title"><a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a></h2>
-      <p>{{user.username}}</p>
+      {{!-- <p class="card-text1">{{user.username}}</p> --}}
       <p class="card-text">{{activities}}</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Finding love in all the right places</small>
     </div>
     {{!-- <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div> --}}
   </div>
 {{/each}}
-
+</div>
 
 {{!-- <!DOCTYPE html>
 <html lang="en">
@@ -139,6 +143,29 @@
   </div> --}}
 </div>   
 
-</body>
-
-</html>
+<div class="matches-wrapper">
+{{#each profiles as |profiles| }}
+{{!-- <h3>{{user.firstname}} {{user.lastname}}</h3> --}}
+<!--<p>{{user.username}}</p>
+<p>Activities: {{activities}}</p>  
+<p>Bio: {{bio}}</p>  
+<p>Age: {{age}}</p>  
+<p>Location: {{location}}</p>
+<p>snapchat: {{snapchat}}</p>  
+<p>instagram: {{instagram}}</p>  
+<p>email: {{user.email}}</p>  
+<p>phonenumber: {{phonenumber}}</p>-->  
+<div class="card">
+    <img src="./images/photo-of-woman-8.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h4 class="card-title">{{img}}</h4>
+      <h5 class="card-title0">{{user.firstname}} {{user.lastname}}</h5>
+      <p class="card-text1">username:{{user.username}}</p>
+      <p class="card-text2">{{activities}}</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Finding love in all the right places</small>
+    </div>
+  </div>
+{{/each}}
+</div>
