--- a/views/icebreak.handlebars
+++ b/views/icebreak.handlebars
@@ -1,4 +1,4 @@
-<!-- Loop over each object in the projects array -->
+{{!-- <!-- Loop over each object in the projects array -->
 {{#each projects as |project| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
@@ -21,4 +21,80 @@
     </p>
   </div>
 </div>
-{{/each}}
+{{/each}} --}}
+
+<section class="container">
+    <img src="/BackofGym-1380x600.jpeg" alt="gym">
+
+    <section class="textblock">
+        <div>
+            <h1>
+                PUMP IT!
+                </h1>
+                <h3>
+                    Brreaking the Ice
+                </h3>
+                <p>
+                    Dont know what to say to your matches? <br>Try one of these ice breakers! Here are a list of topics we recommend discussing with your matches.
+                </p>
+        </div>
+        </section>
+</section>
+
+
+
+
+<div class="tile is-ancestor">
+    <div class="tile is-parent">
+      <article class="tile is-child box">
+        <p class="title">Which gym is your favorite, and why?
+        </p>
+        <br>
+        <p class="subtitle"></p>
+      </article>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child box">
+        <p class="title">What are your fitness goals?
+        </p>
+        <p class="subtitle"></p>
+      </article>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child box">
+        <p class="title">What is your favorite exercise?
+        </p>
+        <p class="subtitle"></p>
+        <div class="content">
+          <p></p>
+        </div>
+      </article>
+    </div>
+  </div>
+
+  <div class="tile is-ancestor">
+    <div class="tile is-parent">
+      <article class="tile is-child box">
+        <p class="title">Where is your favorite place to get smoothies?
+        </p>
+        <p class="subtitle"></p>
+      </article>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child box">
+        <p class="title">Do you prefer to workout with men, or woman?
+        </p>
+        <p class="subtitle"></p>
+      </article>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child box">
+        <p class="title">What are you looking for here, love?
+        </p>
+        <p class="subtitle"></p>
+        <div class="content">
+          <p></p>
+        </div>
+      </article>
+    </div>
+  </div>
