--- a/views/icebreak.handlebars
+++ b/views/icebreak.handlebars
@@ -23,10 +23,10 @@
 </div>
 {{/each}} --}}
 
-<section class="container">
-    <img src="/BackofGym-1380x600.jpeg" alt="gym">
+<section class="" id="container-icebreak">
+    {{!-- <img src="/BackofGym-1380x600.jpeg" alt="gym"> --}}
 
-    <section class="textblock">
+    <section class="container">
         <div>
             <h1>
                 PUMP IT!
