--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,13 +37,23 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#home">My Profile</a>
+              <a class="nav-link" href="/login">THESE NEED TO BE MODIFIED BEFORE RELEASE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#profile">Profile</a>
+              <a class="nav-link" href="/register">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/matches">Matches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/matches/1">Clicked matches</a>
+            </li>
+            
+            <li class="nav-item">
+              <a class="nav-link" href="/icebreak">Icebreaker</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#logout">LogOut</a>
