working on login functionality

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,9 +1,9 @@
-{{#each profile as |profiles| }}
+{{!-- {{#each profile as |profiles| }}
 <h1>{{location}}</h1>
-{{/each}}
+{{/each}} --}}
 
 
-<h3>{{user.firstname}} {{user.lastname}}</h3>
+{{!-- <h3>{{user.firstname}} {{user.lastname}}</h3>
 <p>{{user.username}}</p>
 <p>Activities: {{activities}}</p>  
 <p>Bio: {{bio}}</p>  
@@ -12,7 +12,7 @@
 <p>snapchat: {{snapchat}}</p>  
 <p>instagram: {{instagram}}</p>  
 <p>email: {{user.email}}</p>  
-<p>phonenumber: {{phonenumber}}</p>  
+<p>phonenumber: {{phonenumber}}</p>   --}}
 
 <div>test</div>
 <body class="bg-dark">
