--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,12 +23,14 @@
                   </div>
                   <div class="col-lg-12 col-sm-12">
                     <label>Password:</label>
-                    <input type="text" name="lname" class="form-control" placeholder="Enter your password..">
+                    <input type="text" name="lname" class="form-control" placeholder="Enter your password.." id="password-login">
                     <br>
                   </div>
                 </div>
                 <br>
-                <input type="submit" name="login" value="Log In" class="btn btn-primary btn-block btn-lg mb-4"></input>
+                <a href="/userprofile/{{id}}">
+                  <input type="submit" name="login" value="Log In" class="btn btn-primary btn-block btn-lg mb-4"></input>
+                </a>
               </form>
               
                   
