added login and display userprofile functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,7 +55,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/icebreak">Icebreaker</a>
             </li>
-            <li class="nav-item">
+            <li id="logout" class="nav-item">
               <a class="nav-link" href="#logout">LogOut</a>
             </li>
           </ul>
@@ -111,5 +111,5 @@
       crossorigin="anonymous"></script>
     {{!-- script end --}}
   </body>
-
+<script src="./js/logout.js"></script>
 </html>
