--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
             <h1 class="text-center">LOGIN FORM</h1>
 
 
-            <form class="form-group login-form text-center">
+            <form class="form login-form text-center">
 
               <div class="row">
               </div>
@@ -17,7 +17,7 @@
                   <!-- <div class="col-lg-6"> Original class value -->
                     
                   <div class="col-lg-12 col-sm-12 col-md-12 ">
-                    <label>E-mail:</label>
+                    <label for="email-login">E-mail:</label>
                     <input type="text" name="fname" class="form-control" placeholder="Enter your email.." id="email-login">
                     <br>
                   </div>
@@ -49,11 +49,6 @@
       </div>
     </div>
     {{!-- login end --}}
-
-
-
-
-
 
 {{!-- <div class="row">
   <div class="col-md-6">
@@ -94,6 +89,6 @@
       </div>
     </form>
   </div>
-</div>
+</div> --}}
 
-<script src="./js/login.js"></script> --}}
+<script src="./js/login.js"></script>
