--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -23,8 +23,8 @@
                     <div class="col-sm-4 bg-info rounded-left">
                         <div class="card-block text-center text-white">
                             <i class="fas fa-user-tie fa-7x mt-5"></i>
-                            <h2 class="font-weight-bold mt-4">{{user.username}}</h2>
-                            <p>{{bio}}</p>
+                            {{!-- <h2 class="font-weight-bold mt-4">{{profile.username}}</h2> --}}
+                            <p>{{profile.bio}}</p>
                             <i class="far fa-edit fa-2x mb-4"></i>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <p class="font-weight-bold">Recent:</p>
-                                <h6 class="text-muted">{{activities}}</h6>
+                                <h6 class="text-muted">{{profile.activities}}</h6>
                             </div>
                             
                         </div>
@@ -46,11 +46,11 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <p class="font-weight-bold">Name:</p>
-                                <h6 class="text-muted"> {{user.firstname}} {{user.lastname}} </h6>
+                                <h6 class="text-muted"> {{firstname}} {{lastname}} </h6>
                             </div>
                             <div class="col-sm-6">
                                 <p class="font-weight-bold">Age:</p>
-                                <h6 class="text-muted">{{age}}</h6>
+                                <h6 class="text-muted">{{profile.age}}</h6>
                             </div>
                             <div class="col-sm-6">
                                 <p class="font-weight-bold">Email:</p>
@@ -58,11 +58,11 @@
                             </div>
                             <div class="col-sm-6">
                                 <p class="font-weight-bold">Phone:</p>
-                                <h6 class="text-muted">{{phonenumber}}</h6>
+                                {{!-- <h6 class="text-muted">{{phonenumber}}</h6> --}}
                             </div>
                             <div class="col-sm-6">
                                 <p class="font-weight-bold">Known-Location:</p>
-                                <h6 class="text-muted">{{location}}</h6>
+                                <h6 class="text-muted">{{profile.location}}</h6>
                             </div>
                         </div>
                         
