edits to user routes

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -56,10 +56,10 @@
                             </select> -->
                         <br>
 ​
-                        <label>Phone Number (optional)</label>
-                        <input type="tel" name="phone" class="form-control" placeholder="123-456-7890">
-                        <br>
-                        <br>
+                        {{!-- <label>Phone Number (optional)</label>
+                        <input type="tel" name="phone" class="form-control" placeholder="123-456-7890"> --}}
+                        {{!-- <br>
+                        <br> --}}
 ​
                         <input type="submit" name="submit" value="submit"
                             class="btn btn-primary btn-block btn-lg"></input>
@@ -71,7 +71,7 @@
         </div>
     </div>
 ​
-​
+​   <script src="./js/login.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
