--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -65,6 +65,13 @@
                                 <h6 class="text-muted">{{profile.location}}</h6>
                             </div>
                         </div>
+
+                        <a href="/userprofile/{{id}}">
+                  <input type="submit" name="findmatch" value="Find a MuscleMate!" class="btn btn-primary btn-inline btn-lg mb-4"></input>
+                </a>
+                <a href="/userprofile/{{id}}">
+                  <input type="submit" name="updateainfo" value="Update Info" class="btn btn-primary btn-inline btn-lg mb-4"></input>
+                </a>
                         
                         <!-- <hr class="bg-primary">
                         <div class="row">
