--- a/views/updateProfile.handlebars
+++ b/views/updateProfile.handlebars
@@ -1,14 +1,86 @@
-<div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
-</div>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6">
+                <div id="ui">
+                    <h1 class="text-center">REGISTRATION FORM</h1>
+                    <br>
+                    <form class="form-group text-center">
+​
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label>First Name:</label>
+                                <input type="text" name="fname" class="form-control"
+                                    placeholder="Enter your first name..">
+                            </div>
+                            <div class="col-lg-6">
+                                <label>Last Name:</label>
+                                <input type="text" name="lname" class="form-control"
+                                    placeholder="Enter your last name..">
+                            </div>
+                        </div>
+                        <br>
+                        <label>Username</label>
+                        <input type="email" name="email" class="form-control" placeholder="Enter your username..">
+                        <br>
+                        <label>Email</label>
+                        <input type="email" name="email" class="form-control" placeholder="Enter your email..">
+​
+                        <br>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label>Password:</label>
+                                <input type="password" name="fname" class="form-control"
+                                    placeholder="Enter your password..">
+                            </div>
+                            <div class="col-lg-6">
+                                <label>Re-type Password:</label>
+                                <input type="password" name="lname" class="form-control"
+                                    placeholder="Re-type password..">
+                            </div>
+                            <br>
+                            <!-- <div class="row">
+                                    <label>Phone number (optional):</label>
+                                    <input type="password" name="lname" class="form-control" placeholder="Re-type password..">
+                                </div> -->
+                            <br>
+                        </div>
+​
+                        <!-- <label>Select a Gender:</label>
+                            <select class="form-control">
+                                <option>Choose Gender..</option>
+                                <option>Male</option>
+                                <option>Female</option>
+                                <option>Other</option>
+                            </select> -->
+                        <br>
+​
+                        <label>Phone Number (optional)</label>
+                        <input type="tel" name="phone" class="form-control" placeholder="123-456-7890">
+                        <br>
+                        <br>
+​
+                        <input type="submit" name="submit" value="submit"
+                            class="btn btn-primary btn-block btn-lg"></input>
+​
+                    </form>
+                </div>
+            </div>
+            <div class="col-lg-3"></div>
+        </div>
+    </div>
+​
+​
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+​
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+​
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+</body>
