implemented image display functionality for matches page

--- a/views/matches.handlebars
+++ b/views/matches.handlebars
@@ -14,7 +14,7 @@
 <p>email: {{user.email}}</p>  
 <p>phonenumber: {{phonenumber}}</p>   --}}
 <div class="m-2 card">
-    {{!-- <img src="..." class="card-img-top" alt="..."> --}}
+    <img src="{{profile_img_url}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h2 class="card-title"><a href="/matches/{{id}}">{{user.firstname}} {{user.lastname}}</a></h2>
       {{!-- <p class="card-text1">{{user.username}}</p> --}}
@@ -30,142 +30,6 @@
 {{/each}}
 </div>
 
-{{!-- <!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matches Card</title>
-
- 
-</head> --}}
-
-{{!-- <body class="bg-dark"> --}}
-{{!-- <div class="m-2 card-group">
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-    
-  </div>
-</div>
- <div class="m-2 card-group">
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-    
-  </div>
-</div>   
- <div class="m-2 card-group">
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="m-2 card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-    
-  </div> --}}
 </div>   
 
-<div class="matches-wrapper">
-{{#each profiles as |profiles| }}
-{{!-- <h3>{{user.firstname}} {{user.lastname}}</h3> --}}
-<!--<p>{{user.username}}</p>
-<p>Activities: {{activities}}</p>  
-<p>Bio: {{bio}}</p>  
-<p>Age: {{age}}</p>  
-<p>Location: {{location}}</p>
-<p>snapchat: {{snapchat}}</p>  
-<p>instagram: {{instagram}}</p>  
-<p>email: {{user.email}}</p>  
-<p>phonenumber: {{phonenumber}}</p>-->  
-<div class="card">
-    <img src="./images/photo-of-woman-8.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h4 class="card-title">{{img}}</h4>
-      <h5 class="card-title0">{{user.firstname}} {{user.lastname}}</h5>
-      <p class="card-text1">username:{{user.username}}</p>
-      <p class="card-text2">{{activities}}</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Finding love in all the right places</small>
-    </div>
-  </div>
-{{/each}}
-</div>
