--- a/views/clickedMatch.handlebars
+++ b/views/clickedMatch.handlebars
@@ -27,7 +27,9 @@
                 <div class="row z-depth-3">
                     <div class="col-sm-4 bg-info rounded-left">
                         <div class="card-block text-center text-white">
-                            <i class="fas fa-user-tie fa-7x mt-5"></i>
+                            {{!-- below is routing to http://localhost:3001/matches/images/image_12.jpg --}}
+                        <img src="{{profile_img_url}}" class="card-img-top" alt="...">
+                            {{!-- <i class="fas fa-user-tie fa-7x mt-5"></i> --}}
                             <h2 class="font-weight-bold mt-4">{{user.username}}</h2>
                             <p>{{bio}}</p>
                             <i class="far fa-edit fa-2x mb-4"></i>
