--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,7 +23,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-12">
                     <label>Password:</label>
-                    <input type="text" name="lname" class="form-control" placeholder="Enter your password.." id="password-login">
+                    <input type="password" name="lname" class="form-control" placeholder="Enter your password.." id="password-login">
                     <br>
                   </div>
                 </div>
