--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -31,7 +31,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <label>Password:</label>
-                                <input type="text" name="password" class="form-control" id="password-signup"
+                                <input type="password" name="password" class="form-control" id="password-signup"
                                     placeholder="Enter a password..">
                             </div>
                             {{!-- <div class="col-lg-6">
