--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -22,7 +22,10 @@
                 <div class="row z-depth-3">
                     <div class="col-sm-4 bg-info rounded-left">
                         <div class="card-block text-center text-white">
-                            <i class="fas fa-user-tie fa-7x mt-5"></i>
+                            {{!-- {{profile.profile_img_url}} --}}
+                            {{!-- {{profile_img_url}} --}}
+                            <img src="{{profile.profile_img_url}}" class="card-img-top" alt="...">
+                            {{!-- <i class="fas fa-user-tie fa-7x mt-5"></i> --}}
                             {{!-- <h2 class="font-weight-bold mt-4">{{profile.username}}</h2> --}}
                             <p>{{profile.bio}}</p>
                             <i class="far fa-edit fa-2x mb-4"></i>
