find and update buttons/ update info route

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -69,7 +69,8 @@
                             </div>
                         </div>
 
-                        <a href="/userprofile/{{id}}">
+                        <a href="/matches">
+                        
                   <input type="submit" name="findmatch" value="Find a MuscleMate!" class="btn btn-primary btn-inline btn-lg mb-4"></input>
                 </a>
                 <a href="/userprofile/{{id}}">
